# webgl-water-tutorial

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  armatures.bytes  bird.blend  build.rs  build.sh  index.html  meshes.bytes  run.sh  rust-toolchain.toml  terrain.blend
src/: canvas.rs  controls.rs  lib.rs  load_texture_img.rs  shader.rs
src/app/: mod.rs
src/app/assets/: mod.rs
src/app/store/: camera.rs  mod.rs  mouse.rs  water.rs
src/render/: framebuffer.rs  mesh.rs  mod.rs  render_meshes.rs  render_trait.rs  texture_unit.rs  textured_quad.rs  water_tile.rs
src/render/mesh/: mod.rs  non_skinned_mesh.rs  skinned_mesh.rs
src/shader/: mesh-fragment.glsl  mesh-non-skinned-fragment.glsl  mesh-non-skinned-vertex.glsl  mesh-skinned-fragment.glsl  mesh-skinned-vertex.glsl  mesh-vertex.glsl  mod.rs  textured-quad-fragment.glsl  textured-quad-vertex.glsl  water-fragment.glsl  water-vertex.glsl
