[package]
name = "webgl-water-tutorial"
version = "0.1.0"
authors = ["Chinedu Francis Nwafili <frankie.nwafili@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "=0.1.5"
nalgebra = "=0.16.12"
wasm-bindgen = "=0.2.29"
js-sys = "=0.3.6"

[dependencies.web-sys]
version = "=0.3.6"
features = [
  'Document',
  'Element',
  'HtmlCanvasElement',
  'HtmlElement',
  'Node',
  'WebGlBuffer',
  'WebGlProgram',
  'WebGlRenderingContext',
  'WebGlShader',
  'WebGlVertexArrayObject',
  'WebGlUniformLocation',
  'Window',
  'console',
]
