[package]
name = "webgl-water-tutorial"
version = "0.1.0"
authors = ["Chinedu Francis Nwafili <frankie.nwafili@gmail.com>"]
edition = "2018"
build = "build.rs"

[lib]
crate-type = ["cdylib"]

[dependencies]
bincode = "=1.0.1"
blender-mesh = "=0.3.1"
console_error_panic_hook = "=0.1.5"
js-sys = "=0.3.6"
nalgebra = "=0.16.12"
wasm-bindgen = "=0.2.29"

[build-dependencies]
bincode = "=1.0.1"
blender-mesh = "=0.3.1"
landon = "=0.1.1"

[dependencies.web-sys]
version = "=0.3.6"
features = [
  'Document',
  'Element',
  'EventTarget',
  'HtmlCanvasElement',
  'HtmlElement',
  'MouseEvent',
  'Node',
  'WebGlBuffer',
  'WebGlFramebuffer',
  'WebGlProgram',
  'WebGlRenderbuffer',
  'WebGlRenderingContext',
  'WebGlShader',
  'WebGlTexture',
  'WebGlUniformLocation',
  'WebGlVertexArrayObject',
  'Window',
  'console',
]
