[package]
name = "webgl-water-tutorial"
version = "0.1.0"
authors = ["Chinedu Francis Nwafili <frankie.nwafili@gmail.com>"]
edition = "2018"
build = "build.rs"

[lib]
crate-type = ["cdylib"]

[dependencies]
bincode = "=1.0.1"
blender-armature = "=0.1.7"
blender-mesh = "=0.3.3"
console_error_panic_hook = "=0.1.5"
js-sys = "=0.3.6"
nalgebra = "=0.16.12"
wasm-bindgen = "=0.2.29"

[build-dependencies]
bincode = "=1.0.1"
blender-armature = "=0.1.7"
blender-mesh = "=0.3.3"
landon = "=0.1.2"

[dependencies.web-sys]
version = "=0.3.6"
features = [
  'CssStyleDeclaration',
  'Document',
  'Element',
  'Event',
  'EventTarget',
  'HtmlCanvasElement',
  'HtmlElement',
  'HtmlImageElement',
  'HtmlInputElement',
  'InputEvent',
  'MouseEvent',
  'Node',
  'Touch',
  'TouchEvent',
  'TouchList',
  'WebGlBuffer',
  'WebGlFramebuffer',
  'WebGlProgram',
  'WebGlRenderbuffer',
  'WebGlRenderingContext',
  'WebGlShader',
  'WebGlTexture',
  'WebGlUniformLocation',
  'WebGlVertexArrayObject',
  'WheelEvent',
  'Window',
  'console',
]

[profile.release]
lto = true
